--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "dotenv-expand": "^12.0.2",
     "express": "^4.21.2",
     "express-validator": "^7.2.1",
+    "ioredis": "^5.4.1",
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.1",
     "openai": "^4.103.0",
@@ -76,6 +77,7 @@
     "@tailwindcss/vite": "^4.1.7",
     "@types/bcryptjs": "^3.0.0",
     "@types/express": "^4.17.21",
+    "@types/ioredis": "^5.0.0",
     "@types/jest": "^29.5.5",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.15.21",
