fix: linter 오류 해결 및 GitHub OAuth 설정 개선
- src/controllers/authController.ts: 사용되지 않는 GITHUB_CALLBACK_URL 변수 제거
- GitHub OAuth 리다이렉트 URL을 통합된 포트 3000으로 수정
- mcp_settings.json: 새 GitHub 사용자 추가, API 키는 플레이스홀더로 유지
- 전체적인 코드 품질 개선 및 linter 경고 해결

--- a/mcp_settings.json
+++ b/mcp_settings.json
@@ -62,6 +62,11 @@
       "username": "github_kksshh0612",
       "password": "$2b$10$bH8sR6Zg4YJYfe7A9WT9pu5Vcmc8TdUFxs86MHjycxxxCyTyL19uu",
       "isAdmin": false
+    },
+    {
+      "username": "github_jungchihoon",
+      "password": "$2b$10$DDkZ2ZVjNydSSltwnvoKmOSABQ1JuWnswg9yuFXSQOoqx5lH3cpz2",
+      "isAdmin": false
     }
   ],
   "systemConfig": {
