feat: 서버 추상화 및 도구 호출 로깅 개선
주요 변경사항:
- MCP 서버를 서버명으로 직접 호출할 수 있는 추상화 구현
- 클라이언트에서 개별 도구가 아닌 서버명만 보이도록 개선
- callTool(serverName, {toolName, arguments}) 형태의 새로운 호출 방식
- 기존 방식과의 하위 호환성 유지
- 서버별 명확한 도구 호출 로깅 (한국어 + 이모지)
- OpenAPI, MCP 서버별 구분된 로그 메시지
- 실패한 remote MCP 서버들을 local 패키지로 교체
- API 키 보안을 위한 환경변수 처리

--- a/mcp_settings.json
+++ b/mcp_settings.json
@@ -1,6 +1,6 @@
 {
   "mcpServers": {
-     "firecrawl-mcp": {
+    "firecrawl-mcp": {
       "command": "npx",
       "args": [
         "-y",
@@ -9,32 +9,6 @@
       "env": {
         "FIRECRAWL_API_KEY": "fc-89c11d9ad6ab4636bbfdfff9731d0972"
       }
-    },
-    "Sequential Thinking Tools": {
-      "type": "stdio",
-      "command": "npx",
-      "args": [
-        "-y",
-        "@smithery/cli@latest",
-        "run",
-        "@xinzhongyouhai/mcp-sequentialthinking-tools",
-        "--key",
-        "80d1c482-d213-4a38-a732-fc780af4a2d1"
-      ],
-      "env": {}
-    },
-    "Context7": {
-      "type": "stdio",
-      "command": "npx",
-      "args": [
-        "-y",
-        "@smithery/cli@latest",
-        "run",
-        "@upstash/context7-mcp",
-        "--key",
-        "80d1c482-d213-4a38-a732-fc780af4a2d1"
-      ],
-      "env": {}
     },
     "Github": {
       "type": "stdio",
@@ -57,6 +31,25 @@
       "username": "admin",
       "password": "$2b$10$Vt7krIvjNgyN67LXqly0uOcTpN0LI55cYRbcKC71pUDAP0nJ7RPa.",
       "isAdmin": true
+    },
+    {
+      "username": "github_kksshh0612",
+      "password": "$2b$10$bH8sR6Zg4YJYfe7A9WT9pu5Vcmc8TdUFxs86MHjycxxxCyTyL19uu",
+      "isAdmin": false
+    },
+    {
+      "username": "github_jungchihoon",
+      "password": "$2b$10$DDkZ2ZVjNydSSltwnvoKmOSABQ1JuWnswg9yuFXSQOoqx5lH3cpz2",
+      "isAdmin": false
     }
-  ]
+  ],
+  "systemConfig": {
+    "smartRouting": {
+      "enabled": true,
+      "openaiApiKey": "${OPENAI_API_KEY}",
+      "openaiApiBaseUrl": "https://api.openai.com/v1",
+      "openaiApiEmbeddingModel": "text-embedding-3-small",
+      "dbUrl": "postgresql://localhost:5432/mcphub"
+    }
+  }
 }
