feat: systemConfig를 환경변수로 완전히 이전
- 모든 systemConfig 설정을 환경변수로 처리
- 기본값 지원 (default 형태)
- .env.example 파일 추가로 설정 가이드 제공
- 환경변수 치환 로직 개선
- 배포 및 개발 환경 설정 유연성 향상

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,24 @@
+# MCPHub 환경변수 설정 예시
+# 이 파일을 .env로 복사하고 실제 값으로 변경하세요
+
+# OpenAI API 설정 (Smart Routing 기능용)
+OPENAI_API_KEY=your_openai_api_key_here
+OPENAI_API_BASE_URL=https://api.openai.com/v1
+OPENAI_EMBEDDING_MODEL=text-embedding-3-small
+
+# Smart Routing 기능 활성화 여부
+SMART_ROUTING_ENABLED=true
+
+# 데이터베이스 연결 설정
+DATABASE_URL=postgresql://localhost:5432/mcphub
+
+# 서버 설정
 PORT=3000
 NODE_ENV=development
+
+# Firecrawl API 키 (firecrawl-mcp 서버용)
+FIRECRAWL_API_KEY=your_firecrawl_api_key_here
+
+# 기타 MCP 서버 설정 (필요시)
+# GITHUB_TOKEN=your_github_token_here
+# ANTHROPIC_API_KEY=your_anthropic_api_key_here
