feat: 배치 도구 실행 기능 및 로컬 MCP 서버 설정 업데이트

--- a/mcp_settings.json
+++ b/mcp_settings.json
@@ -1,6 +1,6 @@
 {
   "mcpServers": {
-    "firecrawl-mcp": {
+     "firecrawl-mcp": {
       "command": "npx",
       "args": [
         "-y",
@@ -8,16 +8,118 @@
       ],
       "env": {
         "FIRECRAWL_API_KEY": "fc-89c11d9ad6ab4636bbfdfff9731d0972"
+      },
+      "enabled": true
+    },
+    "sequentialthinking": {
+      "command": "npx",
+      "args": [
+        "-y",
+        "@modelcontextprotocol/server-sequential-thinking"
+      ]
+    },
+    "filesystem": {
+      "command": "npx",
+      "args": [
+        "-y",
+        "@modelcontextprotocol/server-filesystem",
+        "/Users/jungchihoon/chihoon"
+      ]
+    },
+    "git": {
+      "command": "uvx",
+      "args": [
+        "mcp-server-git",
+        "--repository",
+        "C:\\Users\\Administrator\\Desktop\\ums-roo-code"
+      ]
+    },
+    "github": {
+      "command": "docker",
+      "args": [
+        "run",
+        "-i",
+        "--rm",
+        "-e",
+        "GITHUB_PERSONAL_ACCESS_TOKEN",
+        "-e",
+        "GITHUB_TOOLSETS",
+        "-e",
+        "GITHUB_READ_ONLY",
+        "ghcr.io/github/github-mcp-server"
+      ],
+      "env": {
+        "GITHUB_PERSONAL_ACCESS_TOKEN": "${GITHUB_PERSONAL_ACCESS_TOKEN}",
+        "GITHUB_TOOLSETS": "",
+        "GITHUB_READ_ONLY": ""
       }
+    },
+    "Sequential Thinking Tools": {
+      "type": "stdio",
+      "command": "npx",
+      "args": [
+        "-y",
+        "@smithery/cli@latest",
+        "run",
+        "@xinzhongyouhai/mcp-sequentialthinking-tools",
+        "--key",
+        "80d1c482-d213-4a38-a732-fc780af4a2d1"
+      ],
+      "env": {},
+      "enabled": false
+    },
+    "Context7": {
+      "type": "stdio",
+      "command": "npx",
+      "args": [
+        "-y",
+        "@smithery/cli@latest",
+        "run",
+        "@upstash/context7-mcp",
+        "--key",
+        "80d1c482-d213-4a38-a732-fc780af4a2d1"
+      ],
+      "env": {},
+      "enabled": false
+    },
+    "Github": {
+      "type": "stdio",
+      "command": "npx",
+      "args": [
+        "-y",
+        "@smithery/cli@latest",
+        "run",
+        "@smithery-ai/github",
+        "--key",
+        "80d1c482-d213-4a38-a732-fc780af4a2d1",
+        "--profile",
+        "clear-ox-TgjNs3"
+      ],
+      "env": {},
+      "enabled": false
     }
   },
   "systemConfig": {
+    "routing": {
+      "enableGlobalRoute": true,
+      "enableGroupNameRoute": true,
+      "enableBearerAuth": false,
+      "bearerAuthKey": "",
+      "skipAuth": true
+    },
     "smartRouting": {
-      "enabled": "${SMART_ROUTING_ENABLED:-true}",
-      "openaiApiKey": "${OPENAI_API_KEY}",
-      "openaiApiBaseUrl": "${OPENAI_API_BASE_URL:-https://api.openai.com/v1}",
-      "openaiApiEmbeddingModel": "${OPENAI_EMBEDDING_MODEL:-text-embedding-3-small}",
-      "dbUrl": "${DATABASE_URL:-postgresql://localhost:5432/mcphub}"
+      "enabled": true,
+      "openaiApiKey": "your_openai_api_key_here",
+      "openaiApiBaseUrl": "https://api.openai.com/v1",
+      "openaiApiEmbeddingModel": "text-embedding-3-small",
+      "dbUrl": "postgresql://localhost:5432/mcphub"
     }
-  }
+  },
+  "users": [
+    {
+      "username": "admin",
+      "password": "$2b$10$Vt7krIvjNgyN67LXqly0uOcTpN0LI55cYRbcKC71pUDAP0nJ7RPa.",
+      "isAdmin": true
+    }
+  ]
 }
